--- a/LeetCode/801-810/808. 分汤（中等）.md
+++ b/LeetCode/801-810/808. 分汤（中等）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[808. 分汤](https://leetcode.cn/problems/soup-servings/solution/by-ac_oier-3n1h/)** ，难度为 **中等**。
 
-Tag : 「数学」、「动态规划」
+Tag : 「数学」、「动态规划」、「线性 DP」
 
 
 
