--- a/Index/模拟.md
+++ b/Index/模拟.md
@@ -110,6 +110,7 @@
 | [796. 旋转字符串](https://leetcode-cn.com/problems/rotate-string/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/rotate-string/solution/by-ac_oier-bnkx/) | 简单 | 🤩🤩🤩 |
 | [804. 唯一摩尔斯密码词](https://leetcode-cn.com/problems/unique-morse-code-words/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/unique-morse-code-words/solution/by-ac_oier-a9hv/) | 简单 | 🤩🤩🤩 |
 | [806. 写字符串需要的行数](https://leetcode-cn.com/problems/number-of-lines-to-write-string/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/number-of-lines-to-write-string/solution/by-ac_oier-5hg2/) | 简单 | 🤩🤩🤩🤩 |
+| [809. 情感丰富的文字](https://leetcode.cn/problems/expressive-words/) | [LeetCode 题解链接](https://leetcode.cn/problems/expressive-words/solution/by-ac_oier-tb57/) | 中等 | 🤩🤩🤩🤩 |
 | [811. 子域名访问计数](https://leetcode.cn/problems/subdomain-visit-count/) | [LeetCode 题解链接](https://leetcode.cn/problems/subdomain-visit-count/solution/by-ac_oier-aex6/) | 中等 | 🤩🤩🤩🤩 |
 | [812. 最大三角形面积](https://leetcode.cn/problems/largest-triangle-area/) | [LeetCode 题解链接](https://leetcode.cn/problems/largest-triangle-area/solution/by-ac_oier-htv8/) | 简单 | 🤩🤩🤩🤩 |
 | [816. 模糊坐标](https://leetcode.cn/problems/ambiguous-coordinates/) | [LeetCode 题解链接](https://leetcode.cn/problems/ambiguous-coordinates/solution/by-ac_oier-sbxl/) | 中等 | 🤩🤩🤩🤩 |
