--- a/LeetCode/801-810/809. 情感丰富的文字（中等）.md
+++ b/LeetCode/801-810/809. 情感丰富的文字（中等）.md
@@ -44,7 +44,7 @@ words = ["hello", "hi", "helo"]
 * 当 `a` 和 `b` 长度相同，定义为可扩张；
 * 当 `a` 和 `b` 长度不同，根据「`a` 和 `b` 长度对比」以及「`a` 的长度大小」分情况讨论：
     * 当 `b` 长度大于 `a`，不可扩张；
-    * 当 `a` 长度大于 `b`，**我们不一定要拿整一段的 `b` 进行扩张，可以拿 `b` 中的一个字符进行扩张。** 因此只需要满足扩张后的长度（`a` 的长度）大于 $3$ 即可定义为可扩张。
+    * 当 `a` 长度大于 `b`，**我们不一定要拿整一段的 `b` 进行扩张，可以拿 `b` 中的一个字符进行扩张。** 因此只需要满足扩张后的长度（`a` 的长度）大于等于 $3$ 即可定义为可扩张。
 
 搞明白何为 “扩张” 后，剩余的则是简单的「双指针 + 模拟」做法。
 
