--- a/LeetCode/881-890/882. 细分图中的可到达节点（困难）.md
+++ b/LeetCode/881-890/882. 细分图中的可到达节点（困难）.md
@@ -65,10 +65,10 @@ Tag : 「最短路」、「单源最短路」、「Dijkstra」、「SPFA」
 
 随后考虑如何统计答案（可达点的数量），根据统计点的类型分情况讨论：
 
-1. 对于原点：若有 $dist[x] < max$ 的话，说明原点 `x` 可达，累加到答案中；
+1. 对于原点：若有 $dist[x] \leq max$ 的话，说明原点 `x` 可达，累加到答案中；
 
 2. 对于细分点：由于所有的细分点都在原图边上，因此我们可以统计所有原图边上有多少细分点可达。
-    对于任意一条边 $e(u, v)$ 而言，该边上可达点数量包含「经过原点 `u` 可达」以及「经过原点 `v` 可达」的交集，其中原点 `0` 到达原点 `u` 以及原点 `v` 的距离，我们是已知的。因此经过原点 `u` 可达的数量为 $\max(0, max - dist[u])$，经过原点 `v` 可达的数量为 $\max(0, max - dist[v])$，两者之和与该边上细分点的总数取 `min` 即是这条边可达点的数量。
+    对于任意一条边 $e(u, v)$ 而言，该边上可达点数量包含「经过原点 `u` 可达」以及「经过原点 `v` 可达」的并集，其中原点 `0` 到达原点 `u` 以及原点 `v` 的距离，我们是已知的。因此经过原点 `u` 可达的数量为 $\max(0, max - dist[u])$，经过原点 `v` 可达的数量为 $\max(0, max - dist[v])$，两者之和与该边上细分点的总数取 `min` 即是这条边可达点的数量。
 
 代码：
 ```Java
