--- a/LeetCode/131-140/131. 分割回文串（中等）.md
+++ b/LeetCode/131-140/131. 分割回文串（中等）.md
@@ -6,11 +6,11 @@ Tag : 「回文串」、「回溯算法」、「动态规划」
 
 
 
-给你一个字符串 s，请你将 s 分割成一些子串，使每个子串都是 回文串 。返回 s 所有可能的分割方案。
+给你一个字符串 `s`，请你将 `s` 分割成一些子串，使每个子串都是 回文串 。
+
+返回 `s` 所有可能的分割方案。
 
 回文串 是正着读和反着读都一样的字符串。
-
-
 
 示例 1：
 ```
@@ -24,8 +24,8 @@ Tag : 「回文串」、「回溯算法」、「动态规划」
 ```
 
 提示：
-* 1 <= s.length <= 16
-* s 仅由小写英文字母组成
+* $1 <= s.length <= 16$
+* `s` 仅由小写英文字母组成
 
 ---
 
