--- a/LeetCode/1601-1610/1601. 最多可达成的换楼请求数目（困难）.md
+++ b/LeetCode/1601-1610/1601. 最多可达成的换楼请求数目（困难）.md
@@ -6,7 +6,7 @@ Tag : 「二进制枚举」
 
 
 
-我们有 n 栋楼，编号从 0 到 n - 1 。每栋楼有若干员工。由于现在是换楼的季节，部分员工想要换一栋楼居住。
+我们有 `n` 栋楼，编号从 `0` 到 `n - 1` 。每栋楼有若干员工。由于现在是换楼的季节，部分员工想要换一栋楼居住。
 
 给你一个数组 $requests$ ，其中 $requests[i] = [from_i, to_i]$ ，表示一个员工请求从编号为 $from_i$ 的楼搬到编号为 $to_i$ 的楼。
 
@@ -68,7 +68,7 @@ Tag : 「二进制枚举」
 
 我们枚举所有的 $state$ 并进行合法性检查，从中选择出包含请求数的最多（二进制表示中包含 $1$ 个数最多）的合法 $state$，其包含的请求数量即是答案。
 
-其中统计 $state$ 中 $1$ 的个数可以使用 `lowbit`，复杂度为 $O(m)$，判断合法性则直接模拟即可（统计每座建筑的进出数量，最后判定进出数不相等的建筑数量是为 $0$），复杂度为 $O(m)$，整体计算量为不超过 $2*10^6$，可以过。
+其中统计 $state$ 中 $1$ 的个数可以使用 `lowbit`，复杂度为 $O(m)$，判断合法性则直接模拟即可（统计每座建筑的进出数量，最后判定进出数不相等的建筑数量是为 $0$），复杂度为 $O(m)$，整体计算量为不超过 $2 \times  10^6$，可以过。
 
 代码：
 ```Java
@@ -103,7 +103,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：令 $m$ 为 $requests$ 长度，共有 $2^m$ 种选择状态，计算每个状态的所包含的问题数量复杂度为 $O(m)$，计算某个状态是否合法复杂度为 $O(m)$；整体复杂度为 $O(2^m * m)$
+* 时间复杂度：令 $m$ 为 $requests$ 长度，共有 $2^m$ 种选择状态，计算每个状态的所包含的问题数量复杂度为 $O(m)$，计算某个状态是否合法复杂度为 $O(m)$；整体复杂度为 $O(2^m \times m)$
 * 空间复杂度：$O(n)$
 
 ---
