--- a/LeetCode/131-140/132. 分割回文串 II（困难）.md
+++ b/LeetCode/131-140/132. 分割回文串 II（困难）.md
@@ -6,7 +6,7 @@ Tag : 「回文串」、「线性 DP」
 
 
 
-给你一个字符串 s，请你将 s 分割成一些子串，使每个子串都是回文。
+给你一个字符串 `s`，请你将 `s` 分割成一些子串，使每个子串都是回文。
 
 返回符合要求的 最少分割次数 。
 
@@ -28,8 +28,8 @@ Tag : 「回文串」、「线性 DP」
 ```
 
 提示：
-* 1 <= s.length <= 2000
-* s 仅由小写英文字母组成
+* $1 <= s.length <= 2000$
+* `s` 仅由小写英文字母组成
 
 ---
 
