--- a/LeetCode/1741-1750/1743. 从相邻元素对还原数组（中等）.md
+++ b/LeetCode/1741-1750/1743. 从相邻元素对还原数组（中等）.md
@@ -6,13 +6,13 @@ Tag : 「哈希表」、「双指针」、「模拟」
 
 
 
-存在一个由 n 个不同元素组成的整数数组 nums ，但你已经记不清具体内容。好在你还记得 nums 中的每一对相邻元素。
+存在一个由 `n` 个不同元素组成的整数数组 `nums` ，但你已经记不清具体内容。好在你还记得 `nums` 中的每一对相邻元素。
 
-给你一个二维整数数组 adjacentPairs ，大小为 n - 1 ，其中每个 adjacentPairs[i] = [ui, vi] 表示元素 ui 和 vi 在 nums 中相邻。
+给你一个二维整数数组 `adjacentPairs` ，大小为 `n - 1` ，其中每个 $adjacentPairs[i] = [u_i, v_i]$ 表示元素 $u_i$ 和 $v_i$ 在 `nums` 中相邻。
 
-题目数据保证所有由元素 nums[i] 和 nums[i+1] 组成的相邻元素对都存在于 adjacentPairs 中，存在形式可能是 [nums[i], nums[i+1]] ，也可能是 [nums[i+1], nums[i]] 。这些相邻元素对可以 按任意顺序 出现。
+题目数据保证所有由元素 `nums[i]` 和 `nums[i+1]` 组成的相邻元素对都存在于 `adjacentPairs` 中，存在形式可能是 `[nums[i], nums[i+1]]` ，也可能是 `[nums[i+1], nums[i]]` 。这些相邻元素对可以 按任意顺序 出现。
 
-返回 原始数组 nums 。如果存在多种解答，返回 其中任意一个 即可。
+返回 原始数组 `nums` 。如果存在多种解答，返回 其中任意一个 即可。
 
 示例 1：
 ```
@@ -40,12 +40,12 @@ Tag : 「哈希表」、「双指针」、「模拟」
 ```
 
 提示：
-* nums.length == n
-* adjacentPairs.length == n - 1
-* adjacentPairs[i].length == 2
-* 2 <= n <= $10^5$
-* -$10^5$ <= nums[i], ui, vi <= $10^5$
-* 题目数据保证存在一些以 adjacentPairs 作为元素对的数组
+* $nums.length == n$
+* $adjacentPairs.length == n - 1$
+* $adjacentPairs[i].length == 2$
+* $2 <= n <= 10^5$
+* $-10^5 <= nums[i], u_i, v_i <= 10^5$
+* 题目数据保证存在一些以 `adjacentPairs` 作为元素对的数组
 
 ---
 
