--- a/LeetCode/411-420/413. 等差数列划分（中等）.md
+++ b/LeetCode/411-420/413. 等差数列划分（中等）.md
@@ -31,8 +31,8 @@ Tag : 「双指针」、「模拟」、「数学」
 ```
 
 提示：
-* 1 <= nums.length <= 5000
-* -1000 <= nums[i] <= 1000
+* $1 <= nums.length <= 5000$
+* $-1000 <= nums[i] <= 1000$
 
 ---
 
