--- a/LeetCode/1771-1780/1775. 通过最少操作次数使数组的和相等（中等）.md
+++ b/LeetCode/1771-1780/1775. 通过最少操作次数使数组的和相等（中等）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[1775. 通过最少操作次数使数组的和相等量]()** ，难度为 **中等**。
+这是 LeetCode 上的 **[1775. 通过最少操作次数使数组的和相等量](https://www.acoier.com/2022/12/09/1775.%20%E9%80%9A%E8%BF%87%E6%9C%80%E5%B0%91%E6%93%8D%E4%BD%9C%E6%AC%A1%E6%95%B0%E4%BD%BF%E6%95%B0%E7%BB%84%E7%9A%84%E5%92%8C%E7%9B%B8%E7%AD%89%EF%BC%88%E4%B8%AD%E7%AD%89%EF%BC%89/)** ，难度为 **中等**。
 
 Tag : 「枚举」、「贪心」、「数学」
 
