--- a/LeetCode/91-100/95. 不同的二叉搜索树 II（中等）.md
+++ b/LeetCode/91-100/95. 不同的二叉搜索树 II（中等）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[95. 不同的二叉搜索树 II]()** ，难度为 **中等**。
+这是 LeetCode 上的 **[95. 不同的二叉搜索树 II](https://www.acoier.com/2022/12/09/95.%20%E4%B8%8D%E5%90%8C%E7%9A%84%E4%BA%8C%E5%8F%89%E6%90%9C%E7%B4%A2%E6%A0%91%20II%EF%BC%88%E4%B8%AD%E7%AD%89%EF%BC%89/)** ，难度为 **中等**。
 
 Tag : 「树」、「二叉搜索树」、「BST」、「DFS」、「递归」、「爆搜」
 
