--- a/LeetCode/91-100/93. 复原 IP 地址（中等）.md
+++ b/LeetCode/91-100/93. 复原 IP 地址（中等）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[93. 复原 IP 地址](https://www.acoier.com/2022/12/09/93.%20%E5%A4%8D%E5%8E%9F%20IP%20%E5%9C%B0%E5%9D%80%EF%BC%88%E4%B8%AD%E7%AD%89%EF%BC%89/)** ，难度为 **中等**。
 
-Tag : 「回溯」、「DFS」
+Tag : 「回溯算法」、「DFS」
 
 
 
