--- a/LeetCode/111-120/115. 不同的子序列（困难）.md
+++ b/LeetCode/111-120/115. 不同的子序列（困难）.md
@@ -1,22 +1,24 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[115. 不同的子序列]()** ，难度为 **困难**。
+这是 LeetCode 上的 **[115. 不同的子序列](https://leetcode.cn/problems/distinct-subsequences/solution/xiang-jie-zi-fu-chuan-pi-pei-wen-ti-de-t-wdtk/)** ，难度为 **困难**。
 
 Tag : 「线性 DP」
 
 
 
-给定一个字符串 s 和一个字符串 t ，计算在 s 的子序列中 t 出现的个数。
+给定一个字符串 `s` 和一个字符串 `t` ，计算在 `s` 的子序列中 `t` 出现的个数。
 
-字符串的一个 子序列 是指，通过删除一些（也可以不删除）字符且不干扰剩余字符相对位置所组成的新字符串。（例如，"ACE" 是 "ABCDE" 的一个子序列，而 "AEC" 不是）
+字符串的一个 子序列 是指，通过删除一些（也可以不删除）字符且不干扰剩余字符相对位置所组成的新字符串。（例如，`"ACE"` 是 `"ABCDE"` 的一个子序列，而 `"AEC"` 不是）
 
-题目数据保证答案符合 32 位带符号整数范围。
+题目数据保证答案符合 `32` 位带符号整数范围。
 
 
 示例 1：
 ```
 输入：s = "rabbbit", t = "rabbit"
+
 输出：3
+
 解释：
 如下图所示, 有 3 种可以从 s 中得到 "rabbit" 的方案。
 (上箭头符号 ^ 表示选取的字母)
@@ -30,7 +32,9 @@ rabbbit
 示例 2：
 ```
 输入：s = "babgbag", t = "bag"
+
 输出：5
+
 解释：
 如下图所示, 有 5 种可以从 s 中得到 "bag" 的方案。 
 (上箭头符号 ^ 表示选取的字母)
@@ -47,8 +51,8 @@ babgbag
 ```
 
 提示：
-* 0 <= s.length, t.length <= 1000
-* s 和 t 由英文字母组成
+* $0 <= s.length, t.length <= 1000$
+* `s` 和 `t` 由英文字母组成
 
 ---
 
@@ -108,10 +112,11 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：$O(n * m)$
-* 空间复杂度：$O(n * m)$
+* 时间复杂度：$O(n \times m)$
+* 空间复杂度：$O(n \times m)$
 
 *PS. 需要说明的是，由于中间结果会溢出，CPP 中必须使用 long long，而 Java 不用。由于 Java 中 int 的存储机制，只要在运算过程中只要不涉及取 min、取 max 或者其他比较操作的话，中间结果溢出不会影响最终结果。*
+
 ***
 
 ### 总结
