--- a/LeetCode/1691-1700/1697. 检查边长度限制的路径是否存在（困难）.md
+++ b/LeetCode/1691-1700/1697. 检查边长度限制的路径是否存在（困难）.md
@@ -56,6 +56,8 @@ Tag : 「并查集」、「排序」、「双指针」
 
 关于回答连通性问题，容易想到并查集。同时我们可以通过「调整回答询问的顺序」来降低复杂度（避免重复重置并查集和添加某些边），即转换为离线问题来处理。
 
+> 何为离线问题？预先知道所有询问，能够通过调整回答询问的顺序，来降低算法复杂度。同时不同询问相互独立，不会因为调整询问顺序，对每个询问的结果造成影响。例如莫队算法。
+
 具体的，我们可以对边集 `es` 和所有询问 `qs` 分别按照「边权」以及「限制」排升序。为了排序后，仍能知道当前询问的原编号，我们要将所有的 `qs[i]` 转换为四元组。
 
 随后从前往后处理每个询问 `qs[i] = (a, b, t, idx)`，同时使用变量 `j` 来记录当前处理到的边。在查询 `a` 和 `b` 是否连通前，先将边集 `es` 中所有所有边权小于 `t` 的边应用到并查集上，从而实现每次 `ans[idx] = query(a, b)` 查询到的是原图中所有边权小于限制值 `t` 的子图。
