--- a/LeetCode/1971-1980/1976. 到达目的地的方案数（中等）.md
+++ b/LeetCode/1971-1980/1976. 到达目的地的方案数（中等）.md
@@ -10,7 +10,7 @@ Tag : 「最短路」、「拓扑排序」、「动态规划」
 
 给你一个整数 `n` 和二维整数数组 `roads`，其中 $roads[i] = [u_i, v_i, time_i]$ 表示在路口 $u_i$ 和 $v_i$ 之间有一条需要花费 $time_i$ 时间才能通过的道路。你想知道花费 最少时间 从路口 $0$ 出发到达路口 $n - 1$ 的方案数。
 
-请返回花费 最少时间 到达目的地的 路径数目 。由于答案可能很大，将结果对 109 + 7 取余 后返回。
+请返回花费 最少时间 到达目的地的 路径数目 。由于答案可能很大，将结果对 $10^9 + 7$ 取余 后返回。
 
 示例 1：
 ![](https://assets.leetcode.com/uploads/2021/07/17/graph2.png)
@@ -37,10 +37,10 @@ Tag : 「最短路」、「拓扑排序」、「动态规划」
 
 提示：
 * $1 <= n <= 200$
-* $n - 1 <= roads.length <= n * (n - 1) / 2$
+* $n - 1 <= roads.length <= \frac{n \times (n - 1)}{2}$
 * $roads[i].length == 3$
 * $0 <= u_i, v_i <= n - 1$
-* $1 <= time_i <= 109$
+* $1 <= time_i <= 10^9$
 * $u_i != v_i$
 * 任意两个路口之间至多有一条路。
 * 从任意路口出发，你能够到达其他任意路口。
