--- a/LeetCode/391-400/393. UTF-8 编码验证（中等）.md
+++ b/LeetCode/391-400/393. UTF-8 编码验证（中等）.md
@@ -49,7 +49,7 @@ Tag : 「模拟」
 ```
 
 提示:
-* $1 <= data.length <= 2 * 10^4$
+* $1 <= data.length <= 2 \times 10^4$
 * $0 <= data[i] <= 255$
 
 ---
@@ -81,8 +81,7 @@ class Solution {
                 if ((((data[k] >> 7) & 1) == 1) && (((data[k] >> 6) & 1) == 0)) continue;
                 return false;
             }
-            if (cnt == 0) i++;
-            else i += cnt;
+            i += cnt == 0 ? 1 : cnt;
         }
         return true;
     }
