--- a/LeetCode/391-400/396. 旋转函数（中等）.md
+++ b/LeetCode/391-400/396. 旋转函数（中等）.md
@@ -12,7 +12,7 @@ Tag : 「前缀和」、「滑动窗口」
 
 * `F(k) = 0 * arrk[0] + 1 * arrk[1] + ... + (n - 1) * arrk[n - 1]`
 
-返回 `F(0), F(1), ..., F(n-1)`中的最大值 。
+返回 `F(0), F(1), ..., F(n-1)` 中的最大值 。
 
 生成的测试用例让答案符合 $32$ 位 整数。
 
@@ -37,7 +37,7 @@ F(3) = (0 * 3) + (1 * 2) + (2 * 6) + (3 * 4) = 0 + 2 + 12 + 12 = 26
 ```
 
 提示:
-* $n == nums.length$
+* $n = nums.length$
 * $1 <= n <= 10^5$
 * $-100 <= nums[i] <= 100$
 
@@ -47,28 +47,28 @@ F(3) = (0 * 3) + (1 * 2) + (2 * 6) + (3 * 4) = 0 + 2 + 12 + 12 = 26
 
 为了方便，我们将 $nums$ 的长度记为 $n$。
 
-题目要对「旋转数组」做逻辑，容易想到将 $nums$ 进行复制拼接，得到长度为 $2 * n$ 的新数组，在新数组上任意一个长度为 $n$ 的滑动窗口都对应了一个旋转数组。
+题目要对「旋转数组」做逻辑，容易想到将 $nums$ 进行复制拼接，得到长度为 $2 \times n$ 的新数组，在新数组上任意一个长度为 $n$ 的滑动窗口都对应了一个旋转数组。
 
 然后考虑在窗口的滑动过程中，计算结果会如何变化，假设当前我们处理到下标为 $[i, i + n - 1]$ 的滑动窗口，根据题意，当前结果为：
 
 $$
-cur = nums[i] * 0 + nums[i + 1] * 1  + ... + nums[i + n - 1] * (n - 1)
+cur = nums[i] \times 0 + nums[i + 1] \times 1  + ... + nums[i + n - 1] \times (n - 1)
 $$
 
 当窗口往后移动一位，也就是窗口的右端点来到 $i + n$ 的位置，左端点来到 $i + 1$ 的位置。
 
-我们需要增加「新右端点」的值，即增加 $nums[i + n] * (n - 1)$，同时减去「旧左端点」的值，即减少 $nums[i] * 0$（固定为 $0$），然后更新新旧窗口的公共部分 $[i + 1, i + n - 1]$。
+我们需要增加「新右端点」的值，即增加 $nums[i + n] \times (n - 1)$，同时减去「旧左端点」的值，即减少 $nums[i] \times 0$（固定为 $0$），然后更新新旧窗口的公共部分 $[i + 1, i + n - 1]$。
 
 不难发现，随着窗口的逐步右移，每一位公共部分的权值系数都会进行减一。
 
 $$
-nums[i + 1] * 1 + nums[i + 2] * 2 + ... + nums[i + n - 1] * (n - 1)
+nums[i + 1] \times 1 + nums[i + 2] \times 2 + ... + nums[i + n - 1] \times (n - 1)
 $$
 
 变为 
 
 $$
-nums[i + 1] * 0 + nums[i + 2] * 1 + ... + nums[i + n - 1] * (n - 2)
+nums[i + 1] \times 0 + nums[i + 2] \times 1 + ... + nums[i + n - 1] \times (n - 2)
 $$
 
 因此，公共部分的差值为 $\sum_{idx = i + 1}^{i + n - 1}nums[idx]$，这引导我们可以使用前缀和进行优化。
