--- a/LeetCode/1781-1790/1786. 从第一个节点出发到最后一个节点的受限路径数（中等）.md
+++ b/LeetCode/1781-1790/1786. 从第一个节点出发到最后一个节点的受限路径数（中等）.md
@@ -7,13 +7,13 @@ Tag : 「最短路」、「线性 DP」
 
 
 
-现有一个加权无向连通图。给你一个正整数 n ，表示图中有 n 个节点，并按从 1 到 n 给节点编号；另给你一个数组 edges ，其中每个 edges[i] = [ui, vi, weighti] 表示存在一条位于节点 ui 和 vi 之间的边，这条边的权重为 weighti 。
+现有一个加权无向连通图。给你一个正整数 `n` ，表示图中有 `n` 个节点，并按从 `1` 到 `n` 给节点编号；另给你一个数组 `edges`，其中每个 $edges[i] = [u_{i}, v_{i}, weight_{i}]$ 表示存在一条位于节点 $u_{i}$ 和 $v_{i}$ 之间的边，这条边的权重为 $weight_{i}$ 。
 
-从节点 start 出发到节点 end 的路径是一个形如 [z0, z1, z2, ..., zk] 的节点序列，满足 z0 = start 、zk = end 且在所有符合 0 <= i <= k-1 的节点 zi 和 zi+1 之间存在一条边。
+从节点 start 出发到节点 `end` 的路径是一个形如 $[z_{0}, z_{1}, z_{2}, ..., z_{k}]$ 的节点序列，满足 $z_{0} = start$ 、$z_{k} = end$ 且在所有符合 $0 <= i <= k-1$ 的节点 $z_{i}$ 和 $z_{i}+1$ 之间存在一条边。
 
-路径的距离定义为这条路径上所有边的权重总和。用 distanceToLastNode(x) 表示节点 n 和 x 之间路径的最短距离。受限路径 为满足 distanceToLastNode(zi) > distanceToLastNode(zi+1) 的一条路径，其中 0 <= i <= k-1 。
+路径的距离定义为这条路径上所有边的权重总和。用 `distanceToLastNode(x)` 表示节点 `n` 和 `x` 之间路径的最短距离。受限路径 为满足 $distanceToLastNode(z_{i}) > distanceToLastNode(z_{i}+1)$ 的一条路径，其中 $0 <= i <= k-1$ 。
 
-返回从节点 1 出发到节点 n 的 受限路径数 。由于数字可能很大，请返回对 109 + 7 取余 的结果。
+返回从节点 `1` 出发到节点 `n` 的 受限路径数 。由于数字可能很大，请返回对 $10^9 + 7$ 取余 的结果。
 
 示例 1：
 
@@ -38,12 +38,12 @@ Tag : 「最短路」、「线性 DP」
 ```
 
 提示：
-* 1 <= n <= 2 * $10^4$
-* n - 1 <= edges.length <= 4 * $10^4$
-* edges[i].length == 3
-* 1 <= ui, vi <= n
-* ui != vi
-* 1 <= weighti <= $10^5$
+* $1 <= n <= 2 \times 10^4$
+* $n - 1 <= edges.length <= 4 \times 10^4$
+* $edges[i].length == 3$
+* $1 <= ui, vi <= n$
+* $u_i != v_i$
+* $1 <= weighti <= 10^5$
 * 任意两个节点之间至多存在一条边
 * 任意两个节点之间至少存在一条路径
 
@@ -51,35 +51,35 @@ Tag : 「最短路」、「线性 DP」
 
 ### 堆优化 Dijkstra + 动态规划
 
-n 为点的数量，m 为边的数量。
+`n` 为点的数量，`m` 为边的数量。
 
-为了方便理解，我们将第 n 个点称为「起点」，第 1 个点称为「结尾」。
+为了方便理解，我们将第 `n` 个点称为「起点」，第 `1` 个点称为「结尾」。
 
 按照题意，我们需要先求每个点到结尾的「最短路」，求最短路的算法有很多，通常根据「有无负权边」& 「稠密图还是稀疏图」进行选择。
 
-该题只有正权变，而且”边“和”点“的数量在一个数量级上，属于稀疏图。
+该题只有正权变，而且“边”和“点”的数量在一个数量级上，属于稀疏图。
 
 因此我们可以采用「最短路」算法：堆优化的 Dijkstra，复杂度为 $O(m\log{n})$。
 
-*PS. 通常会优先选择 SPFA，SPFA 通常情况下复杂度为 $O(m)$，但最坏情况下复杂度为 $O(n*m)$。从数据上来说 SPFA 也会超，而且本题还结合了 DP，因此可能会卡掉图论部分的 SPFA。出于这些考虑，我直接使用堆优化 Dijkstra。*
+> PS. 通常会优先选择 SPFA，SPFA 通常情况下复杂度为 $O(m)$，但最坏情况下复杂度为 $O(n \times m)$。从数据上来说 SPFA 也会超，而且本题还结合了 DP，因此可能会卡掉图论部分的 SPFA。出于这些考虑，我直接使用堆优化 Dijkstra。
 
 当我们求得了每个点到结尾的「最短路」之后，接下来我们需要求得从「起点」到「结尾」的**受限路径数量**。
 
 这显然可以用 DP 来做。
 
-我们定义 f(i) 为从第 i 个点到结尾的受限路径数量，f(1) 就是我们的答案，而 f(n) = 1 是一个显而易见的起始条件。
+我们定义 `f(i)` 为从第 `i` 个点到结尾的受限路径数量，`f(1)` 就是我们的答案，而 `f(n) = 1` 是一个显而易见的起始条件。
 
 因为题目的**受限路径数**的定义，我们需要找的路径所包含的点，必须是其距离结尾的最短路越来越近的。
 
-举个🌰，对于示例 1，其中一条符合要求的路径为 1 --> 2 --> 3 --> 5。
+举个🌰，对于示例 `1`，其中一条符合要求的路径为 `1 --> 2 --> 3 --> 5`。
 
 这条路径的搜索过程可以看做，从结尾（第 5 个点）出发，逆着走，每次选择一个点（例如 a）之后，再选择下一个点（例如 b）时就必须**满足最短路距离比上一个点（点 a）要远**，如果最终能选到起点（第一个点），说明统计出一条有效路径。
 
 我们的搜索方式决定了需要先按照最短路距离进行从小到大排序。
 
-**不失一般性，当我们要求 f(i) 的时候，其实找的是 i 点可以到达的点 j，并且 j 点到结尾的最短路要严格小于 i 点到结尾的最短路。**
+**不失一般性，当我们要求 `f(i)` 的时候，其实找的是 `i` 点可以到达的点 `j`，并且 `j` 点到结尾的最短路要严格小于 `i` 点到结尾的最短路。**
 
-符合条件的点 j 有很多个，将所有的 f(j) 累加即是 f(i)。
+符合条件的点 `j` 有很多个，将所有的 `f(j)` 累加即是 `f(i)`。
 
 代码：
 ```java
