--- a/LeetCode/621-630/629. K个逆序对数组（困难）.md
+++ b/LeetCode/621-630/629. K个逆序对数组（困难）.md
@@ -111,8 +111,8 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：$O(n * k)$
-* 空间复杂度：$O(n * k)$
+* 时间复杂度：$O(n \times k)$
+* 空间复杂度：$O(n \times k)$
 
 ---
 
