--- a/LeetCode/641-650/648. 单词替换（中等）.md
+++ b/LeetCode/641-650/648. 单词替换（中等）.md
@@ -55,7 +55,7 @@ Tag : 「字典树」
 考虑两个 `Trie` 的基本操作：
 
 * `add` 操作：变量入参字符串 `s`，将字符串中的每位字符映射到 $[0, 25]$，同时为了能够方便查询某个字符串（而不只是某个前缀）是否曾经存入过 `Trie` 中，额外使用一个布尔数组 `isEnd` 记录某个位置是否为单词结尾。
-* `query` 操作：
+* `query` 操作：对变量入参字符串 `s` 进行遍历，如果在字典树不存在该字符串的任何前缀，直接返回 `s`，否则返回首个出现（最短）的前缀。
 
 至于二维数组的大小估算，可以直接开成 $N \times C$，其中 $N$ 为要插入到 `Trie` 中的字符总数，$C$ 为对应的字符集大小。在 $N \times C$ 没有 `MLE` 风险时，可以直接开这么多；而当 $N \times C$ 较大（超过 $1e7$，甚至 $1e8$ 时），可以适当将 $N \times C$ 中的 $N$ 减少，使得总空间在 $1e7$ 左右，因为实际上由于二维数组中的某些行中会存储一个字符以上，实际上我们用不到这么多行。
 
