--- a/LeetCode/451-460/456. 132 模式（中等）.md
+++ b/LeetCode/451-460/456. 132 模式（中等）.md
@@ -6,37 +6,41 @@ Tag : 「单调栈」
 
 
 
-给你一个整数数组 nums ，数组中共有 n 个整数。132 模式的子序列 由三个整数 nums[i]、nums[j] 和 nums[k] 组成，并同时满足：i < j < k 和 nums[i] < nums[k] < nums[j] 。
+给你一个整数数组 `nums`，数组中共有 `n` 个整数。`132` 模式的子序列 由三个整数 `nums[i]`、`nums[j]` 和 `nums[k]` 组成，并同时满足：$i < j < k$ 和 $nums[i] < nums[k] < nums[j]$ 。
 
-如果 nums 中存在 132 模式的子序列 ，返回 true ；否则，返回 false 。
+如果 `nums` 中存在 `132` 模式的子序列 ，返回 `true`；否则，返回 `false`。
 
-
-进阶：很容易想到时间复杂度为 $O(n^2)$ 的解决方案，你可以设计一个时间复杂度为 $O(n logn)$ 或$ O(n)$ 的解决方案吗？
-
+进阶：很容易想到时间复杂度为 $O(n^2)$ 的解决方案，你可以设计一个时间复杂度为 $O(n \log{n})$ 或$ O(n)$ 的解决方案吗？
 
 示例 1：
 ```
 输入：nums = [1,2,3,4]
+
 输出：false
+
 解释：序列中不存在 132 模式的子序列。
 ```
 示例 2：
 ```
 输入：nums = [3,1,4,2]
+
 输出：true
+
 解释：序列中有 1 个 132 模式的子序列： [1, 4, 2] 。
 ```
 示例 3：
 ```
 输入：nums = [-1,3,2,0]
+
 输出：true
+
 解释：序列中有 3 个 132 模式的的子序列：[-1, 3, 2]、[-1, 3, 0] 和 [-1, 2, 0] 。
 ```
 
 提示：
-* n == nums.length
-* 1 <= n <= $10^4$
-* -$10^9$ <= nums[i] <= $10^9$
+* $n = nums.length$
+* $1 <= n <= 10^4$
+* $-10^9 <= nums[i] <= 10^9$
 
 ---
 
@@ -62,7 +66,7 @@ Tag : 「单调栈」
 
 也许你还不理解是什么意思。没关系，我们一边证明一边说。
 
-***
+---
 
 ### 过程 & 证明
 
@@ -91,12 +95,7 @@ Tag : 「单调栈」
 
 **综上，由于「单调递减」的性质，我们至少能找到「遍历过程中」所有符合条件的 `ijk` 中 `k` 最大的那个组合。**
 
-***
-
-### 单调栈
-
-代码：
-
+Java 代码：
 ```Java
 class Solution {
     public boolean find132pattern(int[] nums) {
@@ -114,6 +113,38 @@ class Solution {
         return false;
     }
 }
+```
+Python3 代码：
+```Python3
+class Solution:
+    def find132pattern(self, nums: List[int]) -> bool:
+        stack = []
+        k = -(10 ** 9 + 7)
+        for i in range(len(nums) - 1,-1,-1):
+            if nums[i] < k:
+                return True
+            while stack and stack[-1] < nums[i]:
+                k = max(k,stack.pop())
+            stack.append(nums[i])
+        return False
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    bool find132pattern(vector<int>& nums) {
+        stack<int> st;
+        int n = nums.size(), k = INT_MIN;
+        for(int i = n - 1; i >= 0; i--){
+            if(nums[i] < k) return true;
+            while(!st.empty() and st.top() < nums[i]) { 
+                k = max(k,st.top()); st.pop();
+            }
+            st.push(nums[i]);
+        }
+        return false;
+    }
+};
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(n)$
