--- a/LeetCode/581-590/583. 两个字符串的删除操作（中等）.md
+++ b/LeetCode/581-590/583. 两个字符串的删除操作（中等）.md
@@ -4,9 +4,12 @@
 
 Tag : 「最长公共子序列」、「序列 DP」
 
-给定两个单词 word1 和 word2，找到使得 word1 和 word2 相同所需的最小步数，每步可以删除任意一个字符串中的一个字符。
+
+
+给定两个单词 `word1` 和 `word2`，找到使得 `word1` 和 `word2` 相同所需的最小步数，每步可以删除任意一个字符串中的一个字符。
 
 示例：
+
 ```
 输入: "sea", "eat"
 
@@ -16,7 +19,7 @@ Tag : 「最长公共子序列」、「序列 DP」
 ```
 
 提示：
-* 给定单词的长度不超过500。
+* 给定单词的长度不超过 $500$。
 * 给定单词中的字符只含有小写字母。
 
 ---
@@ -67,8 +70,8 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：$O(n * m)$
-* 空间复杂度：$O(n * m)$
+* 时间复杂度：$O(n \times m)$
+* 空间复杂度：$O(n \times m)$
 
 ---
 
@@ -104,8 +107,8 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：$O(n * m)$
-* 空间复杂度：$O(n * m)$
+* 时间复杂度：$O(n \times m)$
+* 空间复杂度：$O(n \times m)$
 
 ---
 
