--- a/LeetCode/81-90/84. 柱状图中最大的矩形（困难）.md
+++ b/LeetCode/81-90/84. 柱状图中最大的矩形（困难）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[84. 柱状图中最大的矩形](https://leetcode.cn/problems/largest-rectangle-in-histogram/solution/by-ac_oier-i470/)** ，难度为 **中等**。
+这是 LeetCode 上的 **[84. 柱状图中最大的矩形](https://leetcode.cn/problems/largest-rectangle-in-histogram/solution/by-ac_oier-i470/)** ，难度为 **困难**。
 
 Tag : 「单调栈」
 
@@ -12,6 +12,7 @@ Tag : 「单调栈」
 
 示例 1:
 ![](https://assets.leetcode.com/uploads/2021/01/04/histogram.jpg)
+
 ```
 输入：heights = [2,1,5,6,2,3]
 
@@ -21,6 +22,7 @@ Tag : 「单调栈」
 ```
 示例 2：
 ![](https://assets.leetcode.com/uploads/2021/01/04/histogram-1.jpg)
+
 ```
 输入： heights = [2,4]
 
