--- a/LeetCode/1821-1830/1823. 找出游戏的获胜者（中等）.md
+++ b/LeetCode/1821-1830/1823. 找出游戏的获胜者（中等）.md
@@ -86,6 +86,8 @@ class Solution {
 
 这还是一道约瑟夫环经典题。
 
+> 另外一道同款题在 [这里](https://mp.weixin.qq.com/s?__biz=MzU4NDE3MTEyMA==&mid=2247490948&idx=1&sn=a71c4ec3529277ad119702d7dacf510e&chksm=fd9cb69bcaeb3f8d5461518a15d969b45a13558a4c5810100f40200a12aac66f1876f2ef6de7&token=831443013&lang=zh_CN#rd) 🎉🎉
+
 每次往同一方向，以固定步长 $k$ 进行消数。由于下一次操作的发起点为消除位置的下一个点（即前后两次操作发起点在原序列下标中相差 $k$），同时问题规模会从 $n$ 变为 $n - 1$，因此原问题答案等价于 `findTheWinner(n - 1, k) + k`。
 
 一些细节，由于编号从 $1$ 开始，在返回答案时我们需要将结果为 $0$ 的值映射回编号 $n$。
