--- a/LeetCode/2331-2340/2335. 装满杯子需要的最短总时长（简单）.md
+++ b/LeetCode/2331-2340/2335. 装满杯子需要的最短总时长（简单）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[2335. 装满杯子需要的最短总时长]()** ，难度为 **简单**。
 
-Tag : 「递归」、「贪心」、「数学」、「排序」
+Tag : 「排序」、「递归」、「模拟」、「贪心」、「数学」
 
 
 
@@ -55,7 +55,7 @@ Tag : 「递归」、「贪心」、「数学」、「排序」
 
 ---
 
-### 递归
+### 排序 + 递归
 
 水的种类固定为 `3`，且每种水的数据范围只有 $100$，可直接使用递归进行求解。
 
@@ -67,7 +67,7 @@ class Solution {
     public int fillCups(int[] amount) {
         Arrays.sort(amount);
         if (amount[1] == 0) return amount[2];
-        amount[1] -= 1; amount[2] -= 1;
+        amount[1]--; amount[2]--;
         return 1 + fillCups(amount);
     }
 }
